--- a/SQLlite/app/src/main/res/layout/activity_editar_carro.xml
+++ b/SQLlite/app/src/main/res/layout/activity_editar_carro.xml
@@ -50,4 +50,22 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="19dp"
         android:id="@+id/btSalvar" />
+
+    <Button
+        android:text="Cancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/idAnos"
+        android:layout_marginEnd="13dp"
+        android:id="@+id/btCancelar"
+        android:layout_alignTop="@+id/btSalvar" />
+
+    <Button
+        android:text="Excluir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/btCancelar"
+        android:layout_toEndOf="@+id/btCancelar"
+        android:layout_marginStart="12dp"
+        android:id="@+id/btExcluir" />
 </RelativeLayout>
